creado la clase alumno y alumnos con los enums grado curso especialidad profesorado